syntax = "proto3";
import "software-developer.proto";
import "google/protobuf/wrappers.proto";
package service;

option java_multiple_files = true;
option java_package = 'inc.evil.proto.service';

service EmployeeService {
  rpc getById(EmployeeNumber) returns (SoftwareDeveloper); //unary
  rpc getAll(NoParams) returns (stream SoftwareDeveloper); //client-server stream
  rpc deleteEmployee(stream DeleteEmployeeRequest) returns (EmployeesCount); //client stream-server
  rpc notify(stream EmailNotificationRequest) returns (stream EmailNotificationResponse); //client stream-server stream
}

message DeleteEmployeeRequest {
  EmployeeNumber employeeNumber = 1;
}


message EmailNotificationRequest {
  EmployeeNumber employeeNumber = 1;
  string payload = 2;
}


message EmailNotificationResponse {
  NotificationStatus status = 1;
}

enum NotificationStatus {
  NOTIFICATION_SUCCESS = 0;
  NOTIFICATION_FAIL = 1;
}

message EmployeeNumber {
  int64 number = 1;
}

message EmployeesCount {
  int64 count = 1;
}

message NoParams {}
